# Tarea-3_SI

./: .replit  Parte-2.csv  main.py  os_testing_data.csv  os_training_data.csv  parte-2.py  pyproject.toml
Parte 1/: datos_1.csv  datos_2.csv  datos_3.csv
