[tool.poetry]
name = "tarea3si"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.4"
seaborn = "^0.11.0"
sklearn = "^0.0"
plotly = "^4.13.0"
psutil = "^5.7.3"
ipython = "^7.19.0"
openpy = "^0.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
